fix letter spacing and Search text-icon gap

--- a/src/components/StoreDetails/styles.scss
+++ b/src/components/StoreDetails/styles.scss
@@ -69,7 +69,7 @@
         font-family: $font-Montserrat;
         font-size: 13px;
         text-transform: uppercase;
-        letter-spacing: 1px;
+        letter-spacing: 0.5px;
       }
   
       .subtext {
@@ -252,7 +252,7 @@
   input {
     width: 100%;
     background-color: #f9f8f5;
-    padding: 0 23px;
+    padding: 0 32px;
     line-height: 40px;
     font-size: 14px;
     text-align: start;
